--- a/GuitarShop/Views/Product/List.cshtml
+++ b/GuitarShop/Views/Product/List.cshtml
@@ -8,7 +8,7 @@
     <div class="col-sm-2">
             <a asp-controller="Product" asp-action="List" asp-route-id="All" 
                 class="list-group-item 
-                @(ViewBag.SelectedCategoryName == "All" ? "active" : "")">
+                @Model.CheckActiveCategory("All")">
                 All
             </a>
 
