--- a/GuitarShop/Views/Product/List.cshtml
+++ b/GuitarShop/Views/Product/List.cshtml
@@ -17,7 +17,7 @@
 
                     <a asp-controller="Product" asp-action="List" asp-route-id="@c.Name" 
                        class="list-group-item
-                             @(ViewBag.SelectedCategoryName == c.Name ? "active" : "")">
+                             @Model.CheckActiveCategory(c.Name)">
                         @c.Name
                     </a>
 
