--- a/GuitarShop/Areas/Admin/Views/Product/List.cshtml
+++ b/GuitarShop/Areas/Admin/Views/Product/List.cshtml
@@ -33,7 +33,7 @@
                     <th></th>
             </thead>
             <tbody>
-                @foreach (var p in Model)
+                @foreach (var p in Model.Products)
                 {
                     <tr>
                         <td>@p.Name</td>
